test/libsolidity/syntaxTests/parsing/constructor_internal_public.sol
contract C {
  constructor() internal public {}
}
// ----
// ParserError 9439: (38-44='public'): Visibility already specified as "internal".
